--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@
     jobs:
       deploy:
         runs-on: ubuntu-latest
-        
+
         steps:
         - name: SSH and deploy app
           uses: appleboy/ssh-action@master
@@ -17,7 +17,7 @@
             key: ${{ secrets.SSH_KEY }}
             port: ${{ secrets.SSH_PORT }}
             script: |
-              cd ~/auth-api
+              cd ~/auth-hapi-new
               git pull origin master
               npm install
               npm run migrate up
